# src/domain/model/wire/snap-metadata.dto.ts
@@ -1,5 +1,6 @@
 import { SnapMetaData } from '../snap-metadata';
 
-export type SnapMetaDataDto = Omit<SnapMetaData, 'publishedAt'> & {
+export type SnapMetaDataDto = Omit<SnapMetaData, 'publishedAt' | 'closedAt'> & {
   publishedAt: string;
+  closedAt: string | null;
 };
